--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,9 @@
                 <form method="POST" action="/chats/<%= chat._id %>?_method=DELETE">
                     <button>Delete</button>
                 </form>
+                <form method="GET" action="/chats/<%= chat._id %>">
+                    <button>Show</button>
+                </form>
             </div>
             <p><i>Received by: <%=chat.to %></i></p>
             <hr/>   
